syntax = "proto3"; /* default is proto2 */
option java_package = "proto";
service LoginService {
  rpc Authenticate (AuthenticationRequest) returns (AuthenticationReply) {}
  rpc RegisterUser (RegisterUserRequest) returns (RegisterUserReply) {}
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenReply) {}
  rpc DestroyToken (DestroyTokenRequest) returns (DestroyTokenReply) {}
}

message AuthenticationRequest {
  /*type   name = id; */
  string username = 1; /* Id must be bigger than 0 and be the same on client and server */
  string password = 2;
}

message AuthenticationReply {
  string message = 1;
}

message RegisterUserRequest{
  string username = 1;
  string password = 2;
}

message RegisterUserReply{
  string message = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenReply{
  string id = 1;
  string role = 2;
}

message DestroyTokenRequest{
  string token = 1;
}

message DestroyTokenReply{
  string message = 1;
}

